www/index.css
body {
  left: 0px;
  right: 0px;
  top: 0px;
  bottom: 0px;
}
body, li, td {
  font-family:Tahoma,Arial,Verdana;
  font-size: 11px;
  color:#333;
}
div#content {
  position: absolute;
  left: 0px;
  right: 0px;
  top: 0px;
  bottom: 0px;
}
a:hover {
  cursor: pointer;
}
#sidebar_container {
  left: 0px;
  width: 270px;
  top: 0px;
  bottom: 0px;
  position: absolute;
}
#sidebar {
  top: 0px;
  bottom: 0px;
  margin-left:10px;
  margin-right:10px;
  position: absolute;
}
.shadow {
  position:absolute;
  z-index:10000;
  left:0px;
  top:0;
  bottom:0;
  width:5px;
  background-image:url(img/shadow_left.png);
  background-repeat:repeat-y;
  height:100%;
}
#osb_search_form {
  margin: -2px 0px 1px;
}
input#search {
  border: 0px solid;
  background-color:#efefef;
  width: 242px;
  padding:1px;
  font-size:1em;
  color:#333;
  outline:none;
}
.tools {
  border: 1px dotted #999;
  width: 250px;
  margin-top: 3px;
}
#logo {
  padding-top: 10px;
  height:125px;
  font-size:18px;
  color:#333;
  line-height:130%;
  margin-top:5px;
  position: relative;
}
#logo #logo_name { padding-top:17px; margin:0; }
#logo #version {
  text-align:right;
  padding-right: 24px;
  float:right;
  font-size: 16px;
}
#logo #logo_name_bigger {
  font-size:28px;
  display: block;
}
#logo img { 
  float:left; 
  padding-right:10px;
}
#map_container {
  position: absolute;
  left: 270px;
  right: 0;
  top: 0px;
  bottom: 0px;
  border-left:1px solid #999;
  height:100%;
}
#map {
  position: absolute;
  width: 100%;
  height: 100%;
}
#details_container {
  position: relative;
  display: block;
}
#details {
  overflow: auto;
  overflow-x: hidden;
  width: 100%;
}
div#menu {
  position: absolute;
  bottom: 1px;
}
#menu #menu_short {
  display: none;
}
select#lang {
  border: 1px solid gray;
  background-color:#efefef;
  height: 19px;
  width: 250px;
  font-size:1em;
  color:#333;
}
.bullet {
  text-align: center;
  font-size: 14px;
}
h1 {
  margin:0;
  font-size: 13px;
  font-weight: bold;
  padding:3px 5px;
}
h1 input {
  display: none;
}
.box_open_1 h1,
.object h1 {
  border-bottom:1px dotted #ddd;
  margin-bottom:5px;
}
h2 {
  margin: 0;
  padding:0 2px;
  font-size: 12px;
  font-weight: normal;
  clear: left;
}
h3 {
  margin: 0;
  margin-top: 1px;
  font-size: 12px;
  font-weight: normal;
  border-bottom: 0px;
}
h4 {
  margin: 0px;
  margin:3px 0 0 0;
  padding:2px 0;
  font-size: 11px;
  font-weight: bold;
}
.box_closed_3 {
  margin-left: 16px;
}
.box_open_3 {
  margin-left: 16px;
}
.box_closed_3 h3 {
}
.details_title {
  background: #a0a0a0;
  width: 100%;
  height: 20px;
  text-align: right;
  vertical-align: middle;
  border-bottom: 1px solid #000000;
}
.item_show_title, .item_noshow_title {
  font-weight: bold;
}
a { color:#333; text-decoration:none; }
.info h1 a { display:block; }
.debugMsg {
  position: absolute;
  left: 0px;
  width: 200px;
  top: 30px;
  bottom: 30px;
  overflow: auto;
  background: white;
}
.box_open_1 {
  background-color:#efefef;
  border-bottom: 1px dotted #999;
  padding-bottom:5px;
}
.box_closed_1 { 
  border-bottom: 1px dotted #999;
}
.box_closed_1:hover { 
  background-color:#efefef; 
}
.box_content_1_open { }
.box_content_1_closed { display: none; }
.box_content_2_open { }
.box_content_2_closed { display: none; }
.box_content_3_open { }
.box_content_3_closed { display: none; }
.infobox_opened { clear: both; }
.infobox_closed { clear: both; }
ul { padding:0; margin:0 0 7px 15px; list-style-type:square; line-height:120%; padding-left: 20px; }
li { padding-bottom:2px; }
li a:hover { background-color:#ccc; }
img.loading { padding-left: 7px; border-width: 0px; }

.object { background-color:#efefef; }
.object h2 { 
  padding:10px 0 5px 0;
  font-size:11px; 
  font-weight:bold;
}
.object table { border:0; padding:0; margin:0; border-collapse:collapse; }
.object table .details { padding-left:10px; width:100%; }
.object table tbody tr:hover { background-color:#ccc; }
.object table a { display:block; }
.obj_actions{ float:right; margin-right:5px; }
.zoom { padding:0 3px 2px 3px; margin-right:5px; border:1px solid #ccc; }
.zoom:hover { background-color:#ccc; }
.object_chapter { padding:5px; }
.list_info {
  text-align: center;
  font-style: italic;
}
#licence {
  position: absolute;
  left: 10px;
  bottom: 2px;
  color: #333333;
  font-family: Tahoma,Arial,Verdana;
  font-size: smaller;
  text-shadow: 0.1em 0.1em 0.1em #ffffff;
  z-index: 1005;
}
.olControlScaleLine {
  text-shadow: 0.1em 0.1em 0.1em #ffffff;
}
.olControlMousePosition {
  text-shadow: 0.1em 0.1em 0.1em #ffffff;
}
li.listitem {
}
li.listitem_loading {
  font-style: italic;
}
li.listitem_highlight {
  font-weight: bold;
}
li.listitem_notfound {
  text-decoration: line-through;
}
.beg {
  background: white;
  text-align: center;
  width: 400px;
  height: 300px;
  border: 2px solid black;
  z-index: 10001;
}
div.permalink {
  right: 3px;
  bottom: 1.5em;
  display: block;
  position: absolute;
  font-size: smaller;
  text-shadow: 0.1em 0.1em 0.1em #ffffff;
  z-index: 1005;
} 
.help {
  font-size: 8pt;
  font-style: italic;
}
div.editor_category_rule {
  border: 1px solid black;
  margin-top: 1px;
  margin-bottom: 1px;
  padding: 2px;
  margin-left: 2px;
  margin-right: 2px;
}
div.editor_category_rule_list{
}

a.external {
  font-style: italic;
}
div.error {
  background: #ff0000;
  padding: 1px;
  margin: 2px;
  color: #ffffff;
}
div.warning {
  border: 1px solid red;
  padding: 2px;
  font-style: italic;
}

a.external:hover {
  text-decoration: underline;
}

label:hover {
  text-decoration:underline;
}

select.icon-menu option {
  background-repeat: no-repeat;
  background-position: 3px center;
  text-indent: 18px;
}

.layerImg {
  width:50px;
}

.layerImg:hover {
  width:100px;
}

div.search_more {
  padding-left:20px;
  padding-bottom:5px;
  font-style:italic;
}

div.search_more:hover {
  text-decoration:underline;
}

/**************************/
/* css hacks and so on... */
/**************************/

/* to remove dotted lines around links in mozilla */
a:active {
  outline:none;
}
a:focus{
  outline:none;
  -moz-outline-style: none;
}

/* fix IE box problems */
* html .toolbox {
  width:250px;
}

* html .toolboxbutton {
  border:none;
}

